# cargo-cleaner

./: .gitignore  Cargo.toml  README.md  install.sh
src/: cli.rs  lib.rs  main.rs
