[package]
name = "cargo-cleaner"
authors = ["malteki <mki.dev@web.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
walkdir = "2.5"
miette = { version = "7.4", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
regex = "1.11"
lazy_static = "1.5"
byte-unit = "5.1"
