[package]
name = "cargo-cleaner"
authors = ["malteki <mki.dev@web.de>"]
repository = "https://github.com/malteki/cargo-cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1"
walkdir = "2"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
regex = "1"
lazy_static = "1"
byte-unit = "5"
clap = { version = "4.5.23", features = ["derive", "env"] }
