[package]
name = "cargo-cleaner"
authors = ["malteki <mki.dev@web.de>"]
readme = "README.md"
repository = "https://github.com/malteki/cargo-cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1"
walkdir = "2"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
regex = "1"
lazy_static = "1"
byte-unit = "5"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7.1.3"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
debug = false
